# mcp-audit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PR-FAQ.md  README.md  RELEASE_NOTES.md  RELEASE_v1.0.0.md  SECURITY-ADVISORY-2025-001.md  SECURITY.md  action.yml  app.js  deploy.sh  getting-started.html  google-apps-script.js  index.html  pyproject.toml  styles.css
.github/workflows/: mcp-audit.yml
backend/: package-lock.json  package.json
backend/api/: report.ts
collectors/: collector.ps1  collector.sh
docs/: 01-functional-capabilities.md  02-architecture-technical-design.md  03-implementation-plan.md  CLAUDE_CODE_PROMPTS.md  MCP-AUDIT-PRODUCT-STRATEGY.md  MCP-SECURITY-TESTING-STRATEGY.md  RISK_SCORING.md  USER_GUIDE.md  privacy-qa.md  verified-mcp-registry-qa.md
mcp_audit/: __init__.py  cli.py  models.py
mcp_audit/commands/: __init__.py  analyze.py  policy.py  registry.py  scan.py  trust.py
mcp_audit/data/: __init__.py  api_patterns.py  known_mcps.json  owasp_llm.py  secret_patterns.py
mcp_audit/outputs/: __init__.py  formatter.py  pdf_report.py  sarif.py
mcp_audit/scanners/: __init__.py  claude.py  cursor.py  docker.py  project.py  vscode.py  windsurf.py  zed.py
policies/: enterprise.yaml  permissive.yaml  strict.yaml
scripts/: build-cli-zip.sh  dev-server.sh
tests/: __init__.py  conftest.py  test_models.py  test_outputs.py  test_owasp_llm.py  test_policy.py  test_registry.py  test_scanners.py  test_trust.py
tests/fixtures/: claude_desktop_config.json  collected_config.json  cursor_mcp.json  package.json
